# DTV

./: .claudeignore  .gitignore  .prettierrc  AGENTS.md  Cargo.toml  LICENSE  README.md  biome.json  douyu.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  updater.yml
doc/: backend_roadmap.md  frontend_ROADMAP.md  live-stream.md  migration_guideline.md  roadmap.md
dtv-core/: Cargo.toml  TESTING.md  build.rs
dtv-core/src/: danmaku.rs  lib.rs
dtv-core/tests/: bilibili_live.rs  common.rs  douyin_live.rs  douyu_live.rs  huya_live.rs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: public.key
src-tauri/src/: lib.rs  main.rs  proxy.rs
src-tauri/src/commands/: bilibili_danmaku.rs  bilibili_live_list.rs  bilibili_search.rs  douyin_danmaku.rs  douyin_ms_token.rs  douyin_streamer_list.rs  douyu_categories.rs  douyu_danmaku.rs  douyu_live_list.rs  douyu_three_cate.rs  huya_danmaku.rs  huya_live_list.rs  huya_search.rs  live_stream_v2_cmd.rs  mod.rs
src/api/: auth.ts  danmaku.ts  live.ts  proxy.ts  search.ts
src/components/: platformItem.vue  tag.vue
src/components/Common/: LoadingDots.vue  SmoothImage.vue
src/components/CommonCategory/: index.vue
src/components/CommonCategory/components/: Cate1List.vue  Cate2Grid.vue  Cate3List.vue
src/components/CommonStreamerList/: index.vue
src/components/CommonStreamerList/composables/: useBilibiliLiveRooms.ts  useDouyinLiveRooms.ts  useDouyuLiveRooms.ts  useHuyaLiveRooms.ts
src/components/DanmuList/: index.vue
src/components/DouyuCategory/: index.vue
src/components/FollowsList/: FilterChips.vue  FolderContextMenu.vue  FolderItem.vue  FollowOverlay.vue  StreamerItem.vue  index.vue  useProxy.ts
src/components/StreamerInfo/: index.vue
src/components/layout/: DynamicIsland.vue  IslandCapsule.vue  Navbar.vue  NavbarPlayerTab.vue
src/components/player/: danmakuManager.ts  danmuOverlay.ts  danmuPlugins.ts  index.vue  lineOptions.ts  player.css  playerControlsPlugins.ts  plugins.ts  types.ts  watchers.ts
src/components/ui/: PlatformItem.vue  SearchModal.vue  SmoothImage.vue  Tag.vue
src/components/window-controls/: WindowsWindowControls.vue
src/config/: platforms.ts
src/data/categories/: bilibili_categories.json  huya_categories.json
src/features/following/components/: FilterChips.vue  FolderContextMenu.vue  FolderItem.vue  FollowListItem.vue  FollowOverlay.vue  FollowingSidebar.vue  (+2 more)
src/features/player/: constants.ts  controlLayout.ts  danmakuManager.ts  danmuOverlay.ts  lineOptions.ts  player.css  types.ts  watchers.ts
src/features/search/: useGlobalSearch.ts
src/hooks/: useHeaderScroll.ts
src/layout/: Header.vue  MainLayout.vue  Navbar.vue  Sidebar.vue
src/pages/: BilibiliHomeView.vue  BilibiliPlayerView.vue  ChannelList.vue  DouyinHomeView.vue  DouyinPlayerView.vue  DouyuHomeView.vue  DouyuPlayerView.vue  HuyaHomeView.vue  HuyaPlayerView.vue  MultiView.vue  PlatformHomeView.vue  PlayerView.vue  StreamRoom.vue  UniversalPlayerView.vue
src/router/: index.ts
src/store/: bilibili.ts  categoryStore.ts  followStore.ts  playerStore.ts  theme.ts
src/stores/: bilibili.ts  categoryStore.ts  followStore.ts  theme.ts
src/styles/: global.css
src/types/: danmaku.d.ts  danmujs.d.ts  global.d.ts
src/types/api/: auth.ts  live.ts  search.ts
src/types/app/: platform.ts  status.ts
src/types/models/: category.ts  danmaku.ts  streamer.ts
(+11 files in other folders)
