[package]
name = "dtv-core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "dtv_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
log = "0.4"
once_cell = "1.8"

tokio = { version = "1.37.0", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
flate2 = "1.0"
prost = "0.12"
prost-types = "0.12"
chrono = "0.4"
anyhow = "1.0"

native-tls = "0.2"
tungstenite = { version = "0.21", features = ["native-tls"] }
brotlic = "0.8"
reqwest = { version = "0.11", features = ["json", "stream", "cookies", "brotli", "gzip", "blocking"] }

deno_core = "0.288.0"
md-5 = "0.10.6"
urlencoding = "2.1.0"
percent-encoding = "2.1"
html-escape = "0.2"
regex = "1.10.4"
rand = "0.8"
base64 = "0.21"
url = "2.4"

specta = { version = "2.0.0-rc.9", features = ["serde", "derive", "function"] }
tracing-subscriber = "0.3.22"

# tracing_subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
