[package]
name = "dtv"
version = "2.4.4"
description = "A Tauri App"
authors = ["c-zeong"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dtv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }
prost-build = "0.12"

[dependencies]
tauri = { version = "2.7.0", features = ["macos-private-api"] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-updater = "2.3.0"
window-vibrancy = "0.7.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.117"
 md-5 = "0.10.6"
 deno_core = "0.288.0"
 regex = "1.10.4"
 tokio = { version = "1.37.0", features = ["full"] }
 tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
 url = "2.4"
 openssl-sys = { version = "0.9", features = ["vendored"] }
 native-tls = "0.2"
 rand = "0.8"
 futures-util = "0.3"
 urlencoding = "2.1.0"
 percent-encoding = "2.1"
 serde_urlencoded = "0.7"
 reqwest = { version = "0.11", features = ["json", "stream", "cookies", "brotli", "gzip", "blocking"] }
 actix-web = "4"
 actix-cors = "0.7"
 awc = { version = "3.4.0", features = ["tls-rustls-0_22"] }
 bytes = "1"
 tracing = { version = "0.1", features = ["log"] }
 log = "0.4"
 thiserror = "1.0"
 base64 = "0.21"
 anyhow = "1.0"
 once_cell = "1.8"
 hex = "0.4"
 http = "0.2" 
 # Huya TARS codec
 tars-stream = "0.1.1"
  
 # Force curl to use platform TLS (SecureTransport on macOS) and avoid OpenSSL linkage
 # Dependencies for Douyin Danmaku
 prost = "0.12"
 prost-types = "0.12"
 flate2 = "1.0"
 lazy_static = "1.4.0"
 chrono = "0.4"
 
 specta = { version = "2.0.0-rc.9", features = ["serde", "derive", "function"] }
 tauri-plugin-os = "2.3.0"
 tauri-plugin-log = "2.0.0"
 tungstenite = { version = "0.21", features = ["native-tls"] }
 brotlic = "0.8"
 cookie = "0.18"
 html-escape = "0.2"

 [profile.release]
 panic = "abort"
 codegen-units = 1
 lto = true
 opt-level = "z"
 strip = true
